refined some problems with interface core.Solution